<resources>
    <string name="app_name">Pontinho</string>

    <!-- new player activity -->

    <string name="txt_add_new_player">Adicionar novo jogador</string>
    <string name="txt_new_player_first_name">Nome</string>
    <string name="txt_new_player_last_name">Sobrenome</string>
    <string name="txt_new_player_phone">Telefone</string>
    <string name="txt_new_player_email">E-mail</string>
    <string name="txr_add_new_player_confirm">Cadastrar</string>
    <string name="delete_all_players">Delete All</string>

</resources>
